Fixed nav link/focus css not showing in light mode

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -129,7 +129,7 @@ header.md-header {
 .md-nav__item .md-nav__link--active,
 .md-nav__link--active,
 .md-nav__link:active {
-    color: fff;
+    color: --md-typeset-color;
 }
 
 .md-nav__link:hover {
